[client,server] [js,css,html] settings page worked on + bugs squashed

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -11,7 +11,7 @@
 	user-select: none;
 }
 
-#settings #close-button {
+#settings #settings-close {
 	color: #949494;
 	display: inline-block;
 	float: right;
@@ -21,16 +21,16 @@
 	transition: all 0.1s ease;
 }
 
-#settings #close-button > i {
+#settings #settings-close > i {
 	font-size: 52px;
 }
 
-#settings #close-button:hover {
+#settings #settings-close:hover {
 	background: #e4e4e4;
 	color: #8c8c8c;
 }
 
-#settings #close-button:active {
+#settings #settings-close:active {
 	background: #bdbdbd;
 	color: #636262;
 }
@@ -71,11 +71,7 @@
 	display: inline-block;
 	border-radius: 4px;
 	transition: all 0.6s ease;
-}
-
-#settings .changes-saving {
-	border: 4px solid #e0e0e0;
-	animation: colorChange 2s infinite;
+	user-select: none;
 }
 
 #settings #changes-saved > span {
